# BTHomeV2-Arduino

./: CHANGELOG  README.md  library.properties
examples/XIAO_MG24/: XIAO_MG24.ino  adc_mod.cpp  adc_mod.h
examples/XIAO_nrf54L15/: CMakeLists.txt  README.md  prj.conf
examples/XIAO_nrf54L15/boards/: xiao_nrf54l15_nrf54l15_cpuapp.overlay
examples/XIAO_nrf54L15/src/: adc.c  adc.h  bme280.c  bme280.h  main.cpp  wdt.c  wdt.h
src/: BaseDevice.cpp  BaseDevice.h  BtHomeV2Device.cpp  BtHomeV2Device.h  data_types.h
